# MonteCarloPi

./: .gitignore  ArbitraryPrec1.cpp  ArbitraryPrec2.cpp  CMakeLists.txt  HPXdistributed1.cpp  HPXparStrongScaling.sh  HPXparallel1.cpp  HPXversion1.cpp  HPXversion2.cpp  OMParbitraryPrec1.cpp  OMParbitraryPrec2.cpp  OMParbitraryPrec3.cpp  OMPstrongScale.cpp  OMPstrongScaling.csv  OMPweakScale.cpp  OMPweakScaling.csv  OMPweakScaling2.csv  OpenMPversion1  OpenMPversion1.cpp  OpenMPversion2.cpp  README.md  Version1  Version1.cpp  generateData  monteCarloPi.cpp  mt19937.cpp  omprngStrongScale.cpp  omprngStrongScale2.cpp  omprngWeakScale.cpp  pkg-config.sh  pkg-config_HPXdist1.sh  pkg-config_HPXpar1.sh  serialMonteCarlo.cpp  vectorMean.cpp  vectorMean.h  vectorStandardDev.cpp  vectorStandardDev.h  vectorVariance.cpp
arbitrary_precision/: ArbitraryPrec3.cpp
cross_compile/: HPXdistributed.sh  HPXparallel.sh  OMPstrong.sh
cross_compile/OMPstrongScaling/: CMakeLists.txt  OMPstrongScale.cpp
cross_compile/OMPstrongScaling/StrongScaling/: OMPstrongScale.cpp
data/: HPXdist2Data.csv  HPXdist2Data_2017-07-21-07.csv  HPXdist2Data_2017-07-21-53.csv  HPXdistData.csv  HPXpar2Data_2017-07-25-32.csv  HPXparData.csv  HPXparData_2017-07-11-18.csv  HPXparData_2017-07-12-21.csv  HPXparData_2017-07-12-47.csv  HPXparData_2017-07-13-09.csv  HPXparData_2017-07-13-57.csv  OMPstrongScaling.csv  OMPweakScaling.csv  serialData.csv
functions/: monteCarloPi.h
gmp-6.1.2/: Makefile  config.h  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  libgmpxx.la  libtool
hpx_code/: .HPXdistributed1.cpp.swp  .HPXparallel1.cpp.swp  CMakeLists.txt  HPXdistributed1.cpp  HPXdistributed2.cpp  HPXparallel1.cpp  hpxp
open_mp_code/: OMPstrongScale.cpp  OMPweakScale.cpp  omprngStrongScale.cpp  omprngStrongScale2.cpp
rng_tests/: mt19937test.cpp  omprngTest.cpp  pi.cpp  rand_rTest.cpp
scripts/: .nfs000000028143b2a4000000b8  .nfs00000002819c29cd000000b9  .nfs0000000281c001c5000000c0  .nfs0000000281f5de8900000037  .nfs0000000281fdd0ca000000b6  .nfs000000028205f26e000000b7  .nfs00000002820bd1a200000003  .nfs00000002820c42cb0000009b  HPXdist2Data.csv  HPXdist2StrongScaling.sh  HPXdistData.csv  HPXdistStrongScaling.sh  HPXparStrongScaling.sh  OMPparStrongScaling.csv  beowulf_15.sh  build.sh  build_hpx_debug.sh  generateOMPdata.sh  hpxd  marvin_14.sh  parOMPscaling.sh  pkg-config_HPXdist1.sh  pkg-config_HPXdist2.sh  pkg-config_HPXpar1.sh  rHPXdistStrongScaling.sh  rHPXdistStrongScaling_debug.sh  rHPXparStrongScaling.sh  (+1 more)
(+610 files in other folders)
